z-index fix

--- a/less/pace.less
+++ b/less/pace.less
@@ -11,6 +11,8 @@
 .pace-done {
   .loader {
     opacity:0;
+    visibility: hidden;
+    z-index:0;
 
     &.page-not-found {
       opacity:1 !important;
